--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,20 +9,31 @@ spring.jpa.show-sql=true
 # Email Configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=your-email@gmail.com
-spring.mail.password=your-app-password
+spring.mail.username=cdmilandou@gmail.com
+spring.mail.password=nnvt joad wech bhlx
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 # Application URL
-app.frontend.url=http://localhost:3000
+app.frontend.url=http://localhost:5500
 
+# Token expiration (24 hours)
 app.verification.token.expiration=1440
 
 # File upload configuration
+
+
+# Enable SQL logging
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.com.example.soutenance=DEBUG
 
 
 #Files
 app.upload.dir=uploads
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
+
+
+
