--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,4 +36,5 @@ spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
 
 
-
+#Deadline
+app.document.deadline.days=14
